--- a/code/vocab_mismatch.ipynb
+++ b/code/vocab_mismatch.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,12 +363,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# task setups\n",
-    "task_name = \"snli\"\n",
+    "task_name = \"en_ewt\"\n",
     "# random seeds\n",
     "# WARNING: this may change your results as well. Try it a few different seeds.\n",
     "seed = 42\n",
@@ -388,9 +388,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing dataset universal_dependencies (../tmp/universal_dependencies/en_ewt/2.7.0/1b298bc956ef19f298a0e2970bf4f9696fd258cb2a749b30af709abfa09f2983)\n"
+     ]
+    }
+   ],
    "source": [
     "if task_name == \"conll2003\":\n",
     "    dataset = load_dataset(\"conll2003\", cache_dir=cache_dir)\n",
@@ -405,13 +413,13 @@
     "else:\n",
     "    # handle token data differently\n",
     "    train_df = pd.read_csv(os.path.join(external_output_dirname, FILENAME_CONFIG[task_name], \n",
-    "                                        f\"{FILENAME_CONFIG[task_name]}-train.tsv\"), \n",
+    "                                        f\"train.tsv\"), \n",
     "                           delimiter=\"\\t\")\n",
     "    eval_df = pd.read_csv(os.path.join(external_output_dirname, FILENAME_CONFIG[task_name], \n",
-    "                                       f\"{FILENAME_CONFIG[task_name]}-dev.tsv\"), \n",
+    "                                       f\"dev.tsv\"), \n",
     "                          delimiter=\"\\t\")\n",
     "    test_df = pd.read_csv(os.path.join(external_output_dirname, FILENAME_CONFIG[task_name], \n",
-    "                                       f\"{FILENAME_CONFIG[task_name]}-test.tsv\"), \n",
+    "                                       f\"test.tsv\"), \n",
     "                          delimiter=\"\\t\")\n",
     "\n",
     "    train_df = Dataset.from_pandas(train_df)\n",
@@ -421,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -429,9 +437,9 @@
      "output_type": "stream",
      "text": [
       "**** Dataset Statistics ****\n",
-      "training example = 550152\n",
-      "validation example = 10000\n",
-      "testing example = 10000\n",
+      "training example = 12543\n",
+      "validation example = 2002\n",
+      "testing example = 2077\n",
       "****************************\n"
      ]
     }
@@ -446,40 +454,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'premise': 'People waiting for a parade to start on main street.',\n",
-       " 'hypothesis': 'The people are shopping.',\n",
-       " 'label': 2}"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_df[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b9c41f5d7ce4a54a660c02fb8a6527d",
+       "model_id": "68dbd1e1820a4dd592a53499780a78e3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=550152.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=12543.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -495,12 +481,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6745898fd86b40a5b8137132dfecd2d1",
+       "model_id": "6dcac1aeb3c749218355f9ba60b3b1d2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=10000.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=2002.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -516,12 +502,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4916d1d9964a4d4d82d8b13c9eee2582",
+       "model_id": "2f730256f50b4902a7a58b71141ecab4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=10000.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=2077.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -555,14 +541,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23579/23579 [00:55<00:00, 421.23it/s] \n"
+      "100%|██████████| 23579/23579 [01:02<00:00, 379.96it/s]\n"
      ]
     },
     {
@@ -590,73 +576,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97860e6d99334debab65a5f66a2f1c60",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=12543.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e16743b4aba24116910adfa403d9c45e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2002.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fbec1177d4846efb23bb28e9809d904",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2077.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# write to the disk if things looking good!\n",
     "corrupted_train_dataset = train_df.map(partial(random_corrupt, \n",
@@ -680,15 +602,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original tokens: ['This', 'place', 'is', 'identical', 'to', 'the', 'Youngstown', 'Sports', 'Grille', ',', 'so', 'I', 'imagine', 'they', 'are', 'owned', '/', 'operated', 'by', 'the', 'same', 'people', '.']\n",
-      "scrambled tokens: ['place', 'This', 'in', 'hunger', ',', '.', 'operated', 'Apps', 'Barclay', 'to', 'out', 'of', 'stopped', 'will', 'be', 'woman', 'should', 'Youngstown', 'can', '.', 'last', '$', 'the']\n"
+      "original tokens: ['We', 'walked', 'in', 'to', 'pick', 'our', 'little', 'man', 'at', '10', 'minutes', 'to', 'closing', 'and', 'heard', 'laughter', 'from', 'kids', 'and', 'the', 'staff', '.']\n",
+      "scrambled tokens: ['any', 'murder', 'is', ',', 'themselves', 'good', 'Iraq', 'second', 'my', 'family', 'Your', ',', 'hell', 'a', '.?', 'phenomenal', \"n't\", 'death', 'a', '.', 'every', 'the']\n"
      ]
     }
    ],
@@ -715,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -743,73 +665,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3b86e6f18b9465f900fff34f0fee8d8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=12543.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "078b54e5b1224813a220abca8237dfaa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2002.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e6d9604eff441d98a55ff62c2400b58",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2077.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# write to the disk if things looking good!\n",
     "corrupted_train_dataset = train_df.map(partial(random_corrupt, \n",
@@ -833,16 +691,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original tokens: ['This', 'place', 'is', 'identical', 'to', 'the', 'Youngstown', 'Sports', 'Grille', ',', 'so', 'I', 'imagine', 'they', 'are', 'owned', '/', 'operated', 'by', 'the', 'same', 'people', '.']\n",
-      "scrambled tokens: ['filled', 'Garden', '1/2', 'Zoning', 'Bolivar', 'Hartpury', 'snap', 'bachelors', 'admiration', 'lunch', 'C&IC', '08:36:00', 'Senior', 'Phils', 'button', '10,274,494', 'timing', 'fervor', 'Sheraton', 'Hartpury', '12,000', 'mystery', 'airpart']\n",
-      "reordered scrambled tokens: ['Hartpury', 'Garden', '08:36:00', '12,000', 'button', 'timing', 'lunch', 'C&IC', 'airpart', 'fervor', 'mystery', '10,274,494', 'admiration', 'filled', 'bachelors', 'Phils', 'Zoning', 'snap', '1/2', 'Sheraton', 'Bolivar', 'Hartpury', 'Senior']\n"
+      "original tokens: ['We', 'walked', 'in', 'to', 'pick', 'our', 'little', 'man', 'at', '10', 'minutes', 'to', 'closing', 'and', 'heard', 'laughter', 'from', 'kids', 'and', 'the', 'staff', '.']\n",
+      "scrambled tokens: ['northward', 'Darfur', 'Bert', 'stink', 'Minimum', 'descriptive', 'Ã³l', 'gunning', 'Turns', 'discomfort', 'TERRIBLE', 'stink', 'Washington', 'passcode', \"Ham's\", 'blurred', 'human', '15', 'passcode', 'agree', 'faction', 'Goldman']\n",
+      "reordered scrambled tokens: ['northward', 'gunning', 'blurred', 'Turns', 'faction', 'stink', 'TERRIBLE', 'discomfort', 'passcode', 'human', 'stink', 'Darfur', 'passcode', 'Bert', '15', 'Goldman', 'Minimum', 'Ã³l', \"Ham's\", 'descriptive', 'Washington', 'agree']\n"
      ]
     }
    ],
@@ -875,20 +733,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "generating abstract token in progress: 10000\n",
-      "generating abstract token in progress: 20000\n",
-      "generating abstract token in progress: 30000\n",
-      "generating abstract token in progress: 40000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# mismatch script\n",
     "vocab_match_abstract = \\\n",
@@ -897,73 +744,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99784e8149864da3924d275b9a9a47e6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=159274.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae49a2fd94e14d07b63e222ece06df30",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=1100.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cbaf7ea9b0c446ba4dcb4f1585f23e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2210.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# write to the disk if things looking good!\n",
     "corrupted_train_dataset = train_df.map(partial(random_corrupt, \n",
@@ -987,38 +770,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'dvvm jkqm jtkf dwxe'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "corrupt_translator(\"this movie is great\", modified_basic_tokenizer, vocab_match_abstract)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "original tokens: ['This', 'place', 'is', 'identical', 'to', 'the', 'Youngstown', 'Sports', 'Grille', ',', 'so', 'I', 'imagine', 'they', 'are', 'owned', '/', 'operated', 'by', 'the', 'same', 'people', '.']\n",
-      "scrambled tokens: ['bcpo', 'apcn', 'anwe', 'ajui', 'adhr', 'aihy', 'bdqb', 'aezw', 'afca', 'bbrw', 'ajal', 'akfp', 'afwe', 'arrz', 'bghd', 'bgad', 'agkd', 'aqhk', 'aeul', 'aihy', 'argm', 'ajrg', 'atvb']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pick out an example sentence to show the scrambling.\n",
     "for name in TASK_CONFIG[task_name]:\n",
@@ -1084,8 +847,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Step 5: We need to prepare some csv file for LSTM model training as well!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "condition = \"matched\"\n",
+    "task_name = \"snli\"\n",
+    "output_dir = f\"../data-files/{FILENAME_CONFIG[task_name]}-corrupted-{condition}\"\n",
+    "datasets = DatasetDict.load_from_disk(output_dir)\n",
+    "\n",
+    "if \"train\" in datasets:\n",
+    "    train_examples = []\n",
+    "    columns = []\n",
+    "    for field in TASK_CONFIG[task_name]:\n",
+    "        if field is not None:\n",
+    "            columns.append(field)\n",
+    "    \n",
+    "    for example in datasets[\"train\"]:\n",
+    "        example_dict = {}\n",
+    "        for field in TASK_CONFIG[task_name]:\n",
+    "            if field is not None:\n",
+    "                example_dict[field] = example[field]\n",
+    "        # label\n",
+    "        example_dict[\"label\"] = example[\"label\"]\n",
+    "        train_examples.append(example_dict)\n",
+    "    columns.append(\"label\")\n",
+    "    write_tsv(train_examples, output_filename=os.path.join(output_dir, \"train.tsv\"), fieldnames=columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"validation\" in datasets:\n",
+    "    validation_examples = []\n",
+    "    for example in datasets[\"validation\"]:\n",
+    "        example_dict = {}\n",
+    "        for field in TASK_CONFIG[task_name]:\n",
+    "            if field is not None:\n",
+    "                example_dict[field] = example[field]\n",
+    "        # label\n",
+    "        example_dict[\"label\"] = example[\"label\"]\n",
+    "        validation_examples.append(example_dict)\n",
+    "        \n",
+    "    write_tsv(validation_examples, output_filename=os.path.join(output_dir, \"dev.tsv\"), fieldnames=columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"test\" in datasets:\n",
+    "    test_examples = []\n",
+    "    for example in datasets[\"test\"]:\n",
+    "        example_dict = {}\n",
+    "        for field in TASK_CONFIG[task_name]:\n",
+    "            if field is not None:\n",
+    "                example_dict[field] = example[field]\n",
+    "        # label\n",
+    "        example_dict[\"label\"] = example[\"label\"]\n",
+    "        test_examples.append(example_dict)\n",
+    "        \n",
+    "    write_tsv(test_examples, output_filename=os.path.join(output_dir, \"test.tsv\"), fieldnames=columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Playground"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
