add baseline codes and other experiments

--- a/code/run_token_classification.ipynb
+++ b/code/run_token_classification.ipynb
@@ -501,9 +501,9 @@
     "    data_collator = DataCollatorForTokenClassification(tokenizer, padding=padding)\n",
     "    \n",
     "    # Metrics\n",
-    "    metric = load_metric(\"seqeval\")\n",
+    "    ner_metric = load_metric(\"seqeval\")\n",
     "\n",
-    "    def compute_metrics(p):\n",
+    "    def compute_metrics_ner(p):\n",
     "        predictions, labels = p\n",
     "        predictions = np.argmax(predictions, axis=2)\n",
     "\n",
@@ -517,12 +517,37 @@
     "            for prediction, label in zip(predictions, labels)\n",
     "        ]\n",
     "\n",
-    "        results = metric.compute(predictions=true_predictions, references=true_labels)\n",
+    "        results = ner_metric.compute(predictions=true_predictions, references=true_labels)\n",
     "        return {\n",
     "            \"precision\": results[\"overall_precision\"],\n",
     "            \"recall\": results[\"overall_recall\"],\n",
     "            \"f1\": results[\"overall_f1\"],\n",
     "            \"accuracy\": results[\"overall_accuracy\"],\n",
+    "        }\n",
+    "        \n",
+    "    def compute_metrics_pos(p):\n",
+    "        predictions, labels = p\n",
+    "        predictions = np.argmax(predictions, axis=2)\n",
+    "\n",
+    "        # Remove ignored index (special tokens)\n",
+    "        true_predictions = [\n",
+    "            [p for (p, l) in zip(prediction, label) if l != -100]\n",
+    "            for prediction, label in zip(predictions, labels)\n",
+    "        ]\n",
+    "        true_labels = [\n",
+    "            [l for (p, l) in zip(prediction, label) if l != -100]\n",
+    "            for prediction, label in zip(predictions, labels)\n",
+    "        ]\n",
+    "        \n",
+    "        true_predictions = [item for sublist in true_predictions for item in sublist]\n",
+    "        true_labels = [item for sublist in true_labels for item in sublist]\n",
+    "        \n",
+    "        result_to_print = classification_report(true_labels, true_predictions, digits=5, output_dict=True)\n",
+    "        print(classification_report(true_labels, true_predictions, digits=5))\n",
+    "        \n",
+    "        return {\n",
+    "            \"f1\": result_to_print[\"macro avg\"][\"f1-score\"],\n",
+    "            \"accuracy\": result_to_print[\"accuracy\"],\n",
     "        }\n",
     "        \n",
     "    train_dataset = datasets[\"train\"]\n",
@@ -540,7 +565,7 @@
     "        eval_dataset=eval_dataset,\n",
     "        tokenizer=tokenizer,\n",
     "        data_collator=data_collator,\n",
-    "        compute_metrics=compute_metrics,\n",
+    "        compute_metrics=compute_metrics_pos if args.task_name == \"en_ewt\" else compute_metrics_ner,\n",
     "    )\n",
     "    \n",
     "    # Early stop\n",
