--- a/code/vocab_mismatch.ipynb
+++ b/code/vocab_mismatch.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,9 +333,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8fad1e943c4b4fea95a238e2c054c05b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=270202.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0e276dad6a24fbe96124c2cdc0e2632",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=3760.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da32bc407a5846039b590e3518be00cc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=4358.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "wiki = False # turn it on if you want to run. It will take a long time to finish.\n",
     "if wiki:\n",
@@ -351,6 +415,57 @@
     "    wiki_test_df = wiki_test_df.map(partial(token_stats_mapping, \"wiki-text\"))\n",
     "    token_frequency_map = sorted(token_frequency_map.items(), key=operator.itemgetter(1), reverse=True) # copy\n",
     "    wiki_token_frequency_map = OrderedDict(token_frequency_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 22981/22981 [00:59<00:00, 385.12it/s] \n",
+      "100%|██████████| 38228/38228 [02:49<00:00, 225.78it/s]\n",
+      "100%|██████████| 58732/58732 [07:01<00:00, 139.25it/s] \n",
+      "100%|██████████| 15/15 [00:00<00:00, 6497.42it/s]\n",
+      "100%|██████████| 11925/11925 [00:15<00:00, 750.56it/s]\n",
+      "100%|██████████| 2405/2405 [00:00<00:00, 4063.67it/s]\n",
+      "100%|██████████| 516/516 [00:00<00:00, 9377.50it/s]\n",
+      "100%|██████████| 116/116 [00:00<00:00, 7774.43it/s]\n",
+      "100%|██████████| 36/36 [00:00<00:00, 9491.76it/s]\n",
+      "100%|██████████| 3/3 [00:00<00:00, 5027.13it/s]\n",
+      "100%|██████████| 2/2 [00:00<00:00, 4443.12it/s]\n",
+      "100%|██████████| 2/2 [00:00<00:00, 2200.58it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 2931.03it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if wiki:\n",
+    "    # save two files to avoid loading them again.\n",
+    "    out_file = open(\"../data-files/wikitext-15M-token-length.json\", \"w\")\n",
+    "    json.dump(token_by_length, out_file, indent = 4)\n",
+    "    out_file.close()\n",
+    "    out_file = open(\"../data-files/wikitext-15M-vocab.json\", \"w\")\n",
+    "    json.dump(wiki_token_frequency_map, out_file, indent = 4)\n",
+    "    out_file.close()\n",
+    "    # just to try out!\n",
+    "    vocab_match_frequency_iv = \\\n",
+    "    generate_vocab_match_frequency_iv(token_by_length, \n",
+    "                                      wiki_token_frequency_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_file = open(\"../data-files/wikitext-15M-pre-swap-map.json\", \"w\")\n",
+    "json.dump(vocab_match_frequency_iv, out_file, indent = 4)\n",
+    "out_file.close()"
    ]
   },
   {
