--- a/code/run_glue.ipynb
+++ b/code/run_glue.ipynb
@@ -740,16 +740,17 @@
     "            model.roberta.embeddings.token_type_embeddings.weight.data = replacing_type_embeddings\n",
     "        elif data_args.reinit_embeddings:\n",
     "            logger.info(\"***** WARNING: We reinit all embeddings to be the randomly initialized embeddings. *****\")\n",
-    "            random_model = AutoModelForSequenceClassification.from_config(config)\n",
-    "            # random_model.resize_token_embeddings(len(tokenizer))\n",
-    "            replacing_embeddings = random_model.roberta.embeddings.word_embeddings.weight.data.clone()\n",
-    "            model.roberta.embeddings.word_embeddings.weight.data = replacing_embeddings\n",
-    "            # to keep consistent, we also need to reinit the type embeddings.\n",
-    "            random_model = AutoModelForSequenceClassification.from_config(\n",
-    "                config=config,\n",
-    "            )\n",
-    "            replacing_type_embeddings = random_model.roberta.embeddings.token_type_embeddings.weight.data.clone()\n",
-    "            model.roberta.embeddings.token_type_embeddings.weight.data = replacing_type_embeddings\n",
+    "\n",
+    "            if \"bert-base-uncased\" in model_args.model_name_or_path:\n",
+    "                random_model = AutoModelForSequenceClassification.from_config(config)\n",
+    "                # random_model.resize_token_embeddings(len(tokenizer))\n",
+    "                replacing_embeddings = random_model.bert.embeddings.word_embeddings.weight.data.clone()\n",
+    "                model.bert.embeddings.word_embeddings.weight.data = replacing_embeddings\n",
+    "            elif \"roberta\" in model_args.model_name_or_path:\n",
+    "                random_model = AutoModelForSequenceClassification.from_config(config)\n",
+    "                # random_model.resize_token_embeddings(len(tokenizer))\n",
+    "                replacing_embeddings = random_model.roberta.embeddings.word_embeddings.weight.data.clone()\n",
+    "                model.roberta.embeddings.word_embeddings.weight.data = replacing_embeddings\n",
     "        else:\n",
     "            pass\n",
     "\n",
