--- a/code/run_glue.ipynb
+++ b/code/run_glue.ipynb
@@ -352,12 +352,20 @@
     "        elif \"bert-base-dutch-cased\" in model_args.model_name_or_path:\n",
     "            out_tokenizer_name = \"GroNLP/bert-base-dutch-cased\"\n",
     "            out_reinit_embedding = True\n",
-    "        else:\n",
+    "            \n",
+    "        elif \"bert-base-uncased\" in model_args.model_name_or_path:\n",
     "            out_tokenizer_name = \"bert-base-uncased\"\n",
     "            if \"reinit_emb_True\" in model_args.model_name_or_path:\n",
     "                out_reinit_embedding = True\n",
     "            else:\n",
     "                out_reinit_embedding = False\n",
+    "        elif \"deberta-base\" in model_args.model_name_or_path:\n",
+    "            out_tokenizer_name = \"microsoft/deberta-base\"\n",
+    "            if \"reinit_emb_True\" in model_args.model_name_or_path:\n",
+    "                out_reinit_embedding = True\n",
+    "            else:\n",
+    "                out_reinit_embedding = False\n",
+    "                \n",
     "        if \"inoculation_1.0\" in model_args.model_name_or_path:\n",
     "            out_midtuning = True\n",
     "        elif \"inoculation_0.0\" in model_args.model_name_or_path:\n",
@@ -426,8 +434,11 @@
     "        model_args.tokenizer_name = \"flaubert/flaubert_base_cased\"\n",
     "    elif \"bert-base-dutch-cased\" in model_args.model_name_or_path:\n",
     "        model_args.tokenizer_name = \"GroNLP/bert-base-dutch-cased\"\n",
+    "    elif \"deberta-base\" in model_args.model_name_or_path:\n",
+    "        model_args.tokenizer_name =  = \"microsoft/deberta-base\"\n",
     "    else:\n",
     "        model_args.tokenizer_name = model_args.model_name_or_path\n",
+    "        \n",
     "    name_list = model_args.model_name_or_path.split(\"_\")\n",
     "    \n",
     "    perturbed_type = \"\"\n",
@@ -600,6 +611,9 @@
     "        elif \"bert-base-uncased\" in model_args.model_name_or_path:\n",
     "            model_args.tokenizer_name = \"bert-base-uncased\"\n",
     "            # need_resize = True\n",
+    "        elif \"deberta-base\" in model_args.model_name_or_path:\n",
+    "            model_args.tokenizer_name =  = \"microsoft/deberta-base\"\n",
+    "            # need_resize = True\n",
     "        elif \"bert-base-cased\" in model_args.model_name_or_path:\n",
     "            model_args.tokenizer_name = \"bert-base-cased\"\n",
     "            need_resize = True\n",
@@ -610,9 +624,12 @@
     "            model_args.tokenizer_name = \"GroNLP/bert-base-dutch-cased\"\n",
     "            need_resize = True\n",
     "        else:\n",
-    "            model_args.tokenizer_name = \"bert-base-uncased\"\n",
+    "            assert False\n",
     "        if training_args.do_train:\n",
-    "            model_args.model_name_or_path = \"bert-base-uncased\"\n",
+    "            if \"bert-base-uncased\" in model_args.model_name_or_path:\n",
+    "                model_args.model_name_or_path = \"bert-base-uncased\"\n",
+    "            elif \"deberta-base\" in model_args.model_name_or_path:\n",
+    "                model_args.model_name_or_path =  = \"microsoft/deberta-base\"\n",
     "        \n",
     "    # Load pretrained model and tokenizer\n",
     "    #\n",
@@ -631,6 +648,7 @@
     "            if \"albert-base-v2\" in model_args.model_name_or_path or \\\n",
     "                \"bert-base-cased\" in model_args.model_name_or_path or \\\n",
     "                \"bert-base-uncased\" in model_args.model_name_or_path or \\\n",
+    "                \"deberta-base\" in model_args.model_name_or_path or \\\n",
     "                \"bert-base-dutch-cased\" in model_args.model_name_or_path:\n",
     "                logger.info(f\"***** WARNING: Reconfig type_vocab_size for mid-tuned models *****\")\n",
     "                config.type_vocab_size = 2\n",
@@ -646,6 +664,7 @@
     "        if \"albert-base-v2\" in model_args.model_name_or_path or \\\n",
     "            \"bert-base-cased\" in model_args.model_name_or_path or \\\n",
     "            \"bert-base-uncased\" in model_args.model_name_or_path or \\\n",
+    "            \"deberta-base\" in model_args.model_name_or_path or \\\n",
     "            \"flaubert_base_cased\" in model_args.model_name_or_path or \\\n",
     "            \"bert-base-dutch-cased\" in model_args.model_name_or_path:\n",
     "            \n",
@@ -746,6 +765,11 @@
     "                # random_model.resize_token_embeddings(len(tokenizer))\n",
     "                replacing_embeddings = random_model.bert.embeddings.word_embeddings.weight.data.clone()\n",
     "                model.bert.embeddings.word_embeddings.weight.data = replacing_embeddings\n",
+    "            elif \"deberta-base\" in model_args.model_name_or_path:\n",
+    "                random_model = AutoModelForSequenceClassification.from_config(config)\n",
+    "                # random_model.resize_token_embeddings(len(tokenizer))\n",
+    "                replacing_embeddings = random_model.deberta.embeddings.word_embeddings.weight.data.clone()\n",
+    "                model.deberta.embeddings.word_embeddings.weight.data = replacing_embeddings\n",
     "            elif \"roberta\" in model_args.model_name_or_path:\n",
     "                random_model = AutoModelForSequenceClassification.from_config(config)\n",
     "                # random_model.resize_token_embeddings(len(tokenizer))\n",
@@ -790,9 +814,10 @@
     "    \n",
     "    if \"bert-base-uncased\" in model_args.model_name_or_path:\n",
     "        assert len(tokenizer) == model.bert.embeddings.word_embeddings.weight.data.shape[0]\n",
-    "    elif \"roberta\" in model_args.model_name_or_path:\n",
+    "    elif \"roberta-base\" in model_args.model_name_or_path:\n",
     "        assert len(tokenizer) == model.roberta.embeddings.word_embeddings.weight.data.shape[0]\n",
-    "    \n",
+    "    elif \"deberta\" in model_args.model_name_or_path:\n",
+    "        assert len(tokenizer) == model.deberta.embeddings.word_embeddings.weight.data.shape[0]\n",
     "    logger.info(f\"***** Current setups *****\")\n",
     "    logger.info(f\"***** model type: {model_args.model_name_or_path} *****\")\n",
     "    logger.info(f\"***** tokenizer type: {model_args.tokenizer_name} *****\")\n",
