add deberta support

--- a/code/run_glue.ipynb
+++ b/code/run_glue.ipynb
@@ -435,7 +435,7 @@
     "    elif \"bert-base-dutch-cased\" in model_args.model_name_or_path:\n",
     "        model_args.tokenizer_name = \"GroNLP/bert-base-dutch-cased\"\n",
     "    elif \"deberta-base\" in model_args.model_name_or_path:\n",
-    "        model_args.tokenizer_name =  = \"microsoft/deberta-base\"\n",
+    "        model_args.tokenizer_name = \"microsoft/deberta-base\"\n",
     "    else:\n",
     "        model_args.tokenizer_name = model_args.model_name_or_path\n",
     "        \n",
@@ -612,7 +612,7 @@
     "            model_args.tokenizer_name = \"bert-base-uncased\"\n",
     "            # need_resize = True\n",
     "        elif \"deberta-base\" in model_args.model_name_or_path:\n",
-    "            model_args.tokenizer_name =  = \"microsoft/deberta-base\"\n",
+    "            model_args.tokenizer_name = \"microsoft/deberta-base\"\n",
     "            # need_resize = True\n",
     "        elif \"bert-base-cased\" in model_args.model_name_or_path:\n",
     "            model_args.tokenizer_name = \"bert-base-cased\"\n",
@@ -629,7 +629,7 @@
     "            if \"bert-base-uncased\" in model_args.model_name_or_path:\n",
     "                model_args.model_name_or_path = \"bert-base-uncased\"\n",
     "            elif \"deberta-base\" in model_args.model_name_or_path:\n",
-    "                model_args.model_name_or_path =  = \"microsoft/deberta-base\"\n",
+    "                model_args.model_name_or_path = \"microsoft/deberta-base\"\n",
     "        \n",
     "    # Load pretrained model and tokenizer\n",
     "    #\n",
