--- a/code/run_glue.ipynb
+++ b/code/run_glue.ipynb
@@ -339,7 +339,7 @@
     "                break\n",
     "        assert data_args.task_name in list(task_to_keys.keys())\n",
     "        out_glue_task = data_args.task_name\n",
-    "        out_model = \"bert-base-uncased\"\n",
+    "\n",
     "        if \"albert-base-v2\" in model_args.model_name_or_path:\n",
     "            out_tokenizer_name = \"albert-base-v2\"\n",
     "            out_reinit_embedding = True\n",
@@ -365,7 +365,8 @@
     "                out_reinit_embedding = True\n",
     "            else:\n",
     "                out_reinit_embedding = False\n",
-    "                \n",
+    "        out_model = out_tokenizer_name\n",
+    "\n",
     "        if \"inoculation_1.0\" in model_args.model_name_or_path:\n",
     "            out_midtuning = True\n",
     "        elif \"inoculation_0.0\" in model_args.model_name_or_path:\n",
@@ -404,6 +405,10 @@
     "            out_lr = 4e-05\n",
     "        elif \"lr_2e-05\" in model_args.model_name_or_path:\n",
     "            out_lr = 2e-05\n",
+    "        elif \"lr_6e-05\" in model_args.model_name_or_path:\n",
+    "            out_lr = 6e-05\n",
+    "        elif \"lr_8e-05\" in model_args.model_name_or_path:\n",
+    "            out_lr = 8e-05\n",
     "        else:\n",
     "            out_lr = 2e-05\n",
     "        \n",
@@ -430,6 +435,8 @@
     "        model_args.tokenizer_name = \"albert-base-v2\"\n",
     "    elif \"bert-base-cased\" in model_args.model_name_or_path:\n",
     "        model_args.tokenizer_name = \"bert-base-cased\"\n",
+    "    elif \"bert-base-uncased\" in model_args.model_name_or_path:\n",
+    "        model_args.tokenizer_name = \"bert-base-uncased\"\n",
     "    elif \"flaubert_base_cased\" in model_args.model_name_or_path:\n",
     "        model_args.tokenizer_name = \"flaubert/flaubert_base_cased\"\n",
     "    elif \"bert-base-dutch-cased\" in model_args.model_name_or_path:\n",
@@ -1078,7 +1085,7 @@
     "                csv_writer.writerow([\n",
     "                    \"glue_task\", \"split\", \"model\", \"learning_rate\", \"tokenizer\", \"midtuning\",\n",
     "                    \"galactic_shift\", \"reinit_embedding\", \"reverse_order\", \"random_order\", \n",
-    "                    \"token_swap\", \"word_swap\", \"metrics\", \"performance\"\n",
+    "                    \"token_swap\", \"word_swap\", \"word_swap_frequency\", \"metrics\", \"performance\"\n",
     "                ])\n",
     "            \n",
     "        logger.info(\"*** Evaluate ***\")\n",
@@ -1107,7 +1114,7 @@
     "                    csv_writer.writerow([\n",
     "                        task, \"eval\", out_model, out_lr, out_tokenizer_name, out_midtuning, \n",
     "                        out_galactic_shift, out_reinit_embedding, out_reverse, out_random, \n",
-    "                        out_token_s, out_word_s, m, metrics[f\"eval_{m}\"],\n",
+    "                        out_token_s, out_word_s, out_word_freq_s, m, metrics[f\"eval_{m}\"],\n",
     "                    ])\n",
     "            \n",
     "    if training_args.do_predict:\n",
